# my_gameboy

./: CMakeLists.txt  README.md  build.bat  gtest_cmake.txt
dep/SCG/: scg.c  scg.h
src/: CMakeLists.txt  world.c
src/body/: input.c  input.h  ram.c  screen.c  screen.h
src/cart/: cart.c
src/src/: Structure.md
src/src/body/: cpu.c  cpu.h  ram.h  screen.c  sound.c  sound.h
src/src/cart/: cart.c  cart.h
test/: CMakeLists.txt  my_gameboy_test.cpp
